# dossier

./: .env.example  .gitignore  .pre-commit-config.yaml  BACKUPS.md  CLAUDE-CODE-HANDOFF.md  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  predeploy.sh  pyproject.toml  render.yaml  seed.py
.github/: dependabot.yml
.github/workflows/: ci.yml  db-backup.yml  weekly-digest.yml
alembic/: env.py
alembic/versions/: 2e29788e3d2a_create_programs_table.py  5200ae9c068c_add_recommenders_and_program_.py  5bd386d65cfd_add_cascade_delete_to_program_child_.py  5c7897150cf2_add_stipend_and_decision_deadline_to_.py  5d38be7cfc5d_create_user_table.py  5f2e6eac99ef_add_documents.py  61b9ccfe8366_add_url_to_documents.py  8b26887526c7_create_deadlines_table.py  a290203c936e_create_requirements_table.py  a4d2e6f81c37_add_research_area_to_outreach.py  a9c1d3e5f7b2_add_is_demo_to_users.py  b3d5f7a9c1e4_create_app_meta_table.py  (+15 more)
app/: auth.py  config.py  db.py  demo.py  email.py  main.py  ownership.py  pagination.py  ratelimit.py  reminders.py
tests/: conftest.py  test_account_deletion.py  test_admin.py  test_advisors.py  test_auth.py  test_calendar.py  test_config.py  test_dashboard.py  test_deadlines.py  test_demo.py  test_documents.py  test_email.py  test_health.py  test_me.py  test_observability.py  test_outreach.py  test_programs.py  test_recommenders.py  test_reminders.py  test_requirements.py  test_seed.py  test_share.py  test_tasks.py  test_validation.py
ui/: middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  vitest.config.ts
web/: index.html
(+87 files in other folders)
